--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install pytest coverage
+        pip install -r requirements.txt
 
     - name: Run tests with coverage
       run: |
